	       JSBML NEWS -- History of user-visible changes

======================================================================
Version 1.0-rc1 (xx-xx-2012)
======================================================================

* New Features:
  
  - Filter method on TreeNodeWithChangeSupport, which allows for
    recursive queries in the entire data structure.

  - Validation check for e-mail addresses in Creator.
  
  - A quick Hash-based search method to access elements in a model
    based on their identifier. In the same way, any SBase can be
    found in the SBMLDocument based on its metaId.
    
  - In order to make the API more Java-like, for each getNumXXX method
    a corresponding getXXXCount method has been created and the older
    method has become deprecated now.
    
  - The Species class now ensures that its spatial dimensions can only
    be set if its surrounding compartment does not have zero dimensions
    and if its hasOnlySubstanceUnits attribute is false. This behavior
    is specified by the SBML documents for Level 2 Versions 1 and 2, but
    was not yet implemented.
    
  - When trying to derive its UnitDefinition, the Species class now 
    tries to find an existing unit from the model, rather than returning
    some UnitDefinition that has not yet been linked to the model.

  - A new JUnitTestClass helps to check if simplification and merging
    of Units and UnitDefinitions works correctly.
    
  - The userObject in ASTNode has been replaced by a more general map
    of userObjects that is located in AbstractTreeNode. In this way, any
    JSBML object that is part of the SBML tree can now be attached with
    user-defined additional objects for in-memory manipulation. These
    will not be written to SBML later on.


* Bug Fixes:

  - Cloning of models did not work correctly in case that of ASTNodes or 
    Annotation elements that were to be cloned contained references to
    TreeNodeChangeListeners.
    